# pi-pod-os

./: AppState.h  CMakeLists.txt  JellyfinClient.cpp  JellyfinClient.h  README.md  Song.h  Utils.cpp  Utils.h  main.cpp  pi-pod-os-install.sh
Pages/: AboutPage.cpp  AboutPage.h  MenuPage.cpp  MenuPage.h  MusicPage.cpp  MusicPage.h  SettingsPage.cpp  SettingsPage.h  VideoPage.cpp  VideoPage.h
